--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <div class="container my-5 mx-auto">
-        <h1 style="color:white" class="text-muted text-center my-4">Weather Report</h1>
+        <h1 class="text-muted text-center my-4">Weather Report</h1>
         <form class="change-location my-4 text-center text-muted">
-            <label style="color:white"  for="city">Enter any location for weather info</label>
+            <label for="city">Enter any location for weather info</label>
             <input type="text" name="city" class="form-control p-4 my-4"> 
         </form>
         <div class="card shadow-lg rounded d-none">
